--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     font-size: 12px;
     color: white;
     background: #333;
-    width: 500px;
+    width: clamp(350px,100%,600px);
     height: 40px;
     display: grid;
     place-items: center;
